<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/navigation_clients"
        android:icon="@drawable/ic_business_black_24dp"
        android:title="@string/title_clients" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
